# raccoon-spotter

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  foo  plot_resized_raccoon_data_array copy.ipynb  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: package.yml
app/: Dockerfile  README.md  app.py  requirements.txt  util.py
app/docs/: screenshot.avif
app/imports/: components  utils
app/models/: README.md
app/static/: main.css  main.js
app/templates/: base.html  index.html
conf/: logging.yml
conf/base/: catalog.yml  configs.yml  parameters_data_processing.yml  parameters_feature_extraction.yml  parameters_model_evaluation.yml  parameters_model_training.yml
notebooks/: bayes.ipynb  model-diagnostics.ipynb  plot-resized-raccoon-data-array.ipynb  plot_resized_raccoon_data_array.ipynb
scripts/: authenticate.sh  install-deps.sh
src/raccoon_spotter/: __init__.py  __main__.py  cli.py  hooks.py  pipeline_registry.py  requirements.txt  settings.py
src/raccoon_spotter/datasets/: __init__.py  abstract_filesystem.py  keras_model.py  npz_arrays.py  zipped_images.py
src/raccoon_spotter/models/: __init__.py
src/raccoon_spotter/models/architectures/: bayesian_deep_regressor.py  bayesian_inceptor.py  bayesian_regressor.py  simple_regressor.py
src/raccoon_spotter/utils/: __init__.py  configs.py  data_conversion.py  data_visualization.py  metrics.py  wandb.py
src/tests/: test_run.py
src/tests/pipelines/: test_data_loading.py  test_data_processing.py  test_model_training.py
tests/pipelines/: test_data_science.py
(+21 files in other folders)
